<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:tools="http://schemas.android.com/tools"
             android:stretchColumns="*"
             tools:context=".DatosActivity">


    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/datos"
        android:textAlignment="center"
        android:background="@color/teal_700"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

        <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/valor"
        android:textAlignment="center"
        android:background="@color/teal_700"
        android:textColor="@color/white"
        android:textStyle="bold"
        />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/canal"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valorCanal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center" />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/programas"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/valorPrograma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center" />

    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        >

        <Button
            android:id="@+id/bnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="2"
            android:text="Regresar"></Button>


    </TableRow>

</TableLayout>

